<resources>
    <string name="app_name">CineMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="now_playing">Now Playing</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="app_slogan">~ Your cinema companion ~</string>
    <string name="my_favorites">My Favorites</string>
    <string name="planned_to_watch">Planned To Watch</string>
    <string name="search_for_movie">Search for movie...</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam hendrerit tellus nibh, vitae iaculis justo accumsan id. Suspendisse lectus orci, ultrices a diam nec, gravida congue ligula. Vestibulum ut est ut est laoreet vestibulum. Nunc imperdiet, libero sit amet fermentum vulputate, enim urna vestibulum urna, quis maximus purus magna quis urna. In id augue et orci mattis suscipit. Sed eleifend enim a vulputate dictum. Morbi mauris turpis, hendrerit ut urna nec, accumsan pretium est. Duis ornare urna elit, id gravida dui malesuada non. Suspendisse posuere, leo ut mollis tincidunt, turpis erat pulvinar augue, a tincidunt ante lacus ut lectus. Curabitur sed erat est.
    </string>
    <string name="overview">Overview</string>
    <string name="casts">Casts</string>
    <string name="you_may_also_like">You May Also Like</string>
    <string-array name="watch_now_quotes">
        <item>For You To Watch</item>
        <item>Watch Now Or Never</item>
        <item>Wait No More</item>
        <item>Get The Damn Ticket!</item>
        <item>Anything To Watch</item>
    </string-array>
    <string-array name="upcoming_quotes">
        <item>Don\'t Miss It!</item>
        <item>Coming Soon</item>
        <item>Wait For The Hype</item>
        <item>It\'s Almost There</item>
        <item>You May Need To Wait</item>
    </string-array>
</resources>
